src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bundle</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cooling_of_End_Date__c</fullName>
        <formula>Quote_Signed_Date__c +  Cooling_off_Days__c</formula>
        <label>End of Cooling-Off Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cooling_off_Days__c</fullName>
        <defaultValue>14</defaultValue>
        <label>Cooling off Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Docusign_Envelope_ID__c</fullName>
        <label>Docusign Envelope ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Status__c</fullName>
        <label>Docusign Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_status__c</fullName>
        <label>Duration status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defined with renewal</fullName>
                </value>
                <value>
                    <fullName>Defined</fullName>
                </value>
                <value>
                    <fullName>Undefined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <label>IBAN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_of_Payment__c</fullName>
        <label>Method of Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Credit card</fullName>
                </value>
                <value>
                    <fullName>Direct Debit</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Days_to_Expire__c</fullName>
        <description>The field to calculate number of days for quote expiration. To be used in reports</description>
        <formula>ExpirationDate  - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days to Expire</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oppurtunity_Record_type__c</fullName>
        <formula>Opportunity.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppurtunity Record type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Day__c</fullName>
        <label>Payment Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st of month</fullName>
                </value>
                <value>
                    <fullName>Last day of month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Schedule__c</fullName>
        <label>Payment Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>14 days</fullName>
                </value>
                <value>
                    <fullName>Cash on delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Specification__c</fullName>
        <label>Payment Specification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Days__c</fullName>
        <description>This Field is used in Quote report to show the Quotes still in Draft even after some &quot;X&quot; days.</description>
        <formula>TODAY()- DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Reason__c</fullName>
        <label>Quote Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Signed_Date__c</fullName>
        <label>Quote Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Security_Deposit_Condition__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Security Deposit Condition</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Security_Deposit_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Security Deposit Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Security_Deposit_Value__c</fullName>
        <formula>IF((RecordTypeId  = &apos;01228000000DE4E&apos; ) &amp;&amp; 
ISPICKVAL(Opportunity.Account.Customer_Accepted__c,&quot;Accepted under Conditions&quot;) &amp;&amp; 
NOT(ISNULL(Opportunity.Number_Of_Opp_Product__c )), 2*Opportunity.Total_Price_of_Product__c ,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Security Deposit Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Security_Deposite_Update_On_Quote__c</fullName>
        <formula>Opportunity.Security_Deposit_Condition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Security Deposite Update On Quote</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payment__c</fullName>
        <label>Terms of Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>14d end of month</fullName>
                </value>
                <value>
                    <fullName>14d net</fullName>
                </value>
                <value>
                    <fullName>30d end of month</fullName>
                </value>
                <value>
                    <fullName>30d net</fullName>
                </value>
                <value>
                    <fullName>60d end of month</fullName>
                </value>
                <value>
                    <fullName>60d net</fullName>
                </value>
                <value>
                    <fullName>Cash on delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_Security_Deposit__c</fullName>
        <formula>2*Opportunity.Total_Price_of_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Updated Security Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Waiting_for_Security_Deposit__c</fullName>
        <formula>Opportunity.Waiting_for_Security_Deposit__c</formula>
        <label>Waiting for Security Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Won_Lost_Reason__c</fullName>
        <label>Denied Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote Expired</fullName>
                </value>
                <value>
                    <fullName>Feature</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Need</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>Authority</fullName>
                </value>
                <value>
                    <fullName>Contract term</fullName>
                </value>
                <value>
                    <fullName>Lost momentum</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <recordTypes>
        <fullName>Business</fullName>
        <active>true</active>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consumer</fullName>
        <active>true</active>
        <label>Consumer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lock_the_stage_once_updated_as_closed</fullName>
        <active>true</active>
        <description>Once the status is updated as Accepted , it cannot be changed.</description>
        <errorConditionFormula>ISCHANGED(Status)&amp;&amp;(ISPICKVAL(PRIORVALUE( Status ),&apos;Accepted&apos;))</errorConditionFormula>
        <errorMessage>Once the status is updated as Accepted , it cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>